Kubernetes/preprod/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod-fusion-ms-deployment
  namespace: preprod
  labels:
    app: fusion-ms
    env: preprod
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: fusion-ms
      env: preprod
  template:
    metadata:
      labels:
        app: fusion-ms
        env: preprod
    spec:
      serviceAccountName: preprod-fusion-ms-sa
      containers:
        - name: fusion-ms
          image: 559220132560.dkr.ecr.ap-south-1.amazonaws.com/fusion-ms-ms:latest
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 500m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: preprod-fusion-ms-application-config
